[package]
name = "chip-8-interpreter"
version = "0.1.0"
authors = ["alan2 <alan5142@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34.4", features = ["bundled","static-link"]}
gl = "0.14.0"
chip-8 = { path = "../chip-8" }